Soluciona error de dotenv en Vercel

--- a/vercel.json
+++ b/vercel.json
@@ -9,5 +9,6 @@
   "env": {
     "NEXTAUTH_URL": "${VERCEL_URL}"
   },
-  "buildCommand": "npm install dotenv && npm run build"
+  "buildCommand": "npm run build",
+  "installCommand": "npm install dotenv"
 } 
