--- a/vercel.json
+++ b/vercel.json
@@ -7,10 +7,10 @@
     }
   ],
   "env": {
-    "NEXTAUTH_URL": "${VERCEL_URL}"
+    "NEXTAUTH_URL": "${VERCEL_URL}",
+    "NODE_VERSION": "20.x"
   },
   "buildCommand": "npm run build",
   "installCommand": "npm install dotenv",
-  "framework": "nextjs",
-  "nodeVersion": "20.x"
+  "framework": "nextjs"
 } 
