--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
+    "google-auth-library": "^9.15.1",
     "googleapis": "^129.0.0",
     "lucide-react": "^0.510.0",
     "next": "^14.0.4",
